Fixed repo / made testable